# grpc-payment-ledger

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
chaos-tests/: README.md
docs/: README.md
docs/database/: schema.md
docs/events/: event-schemas.md
docs/iterations/: iteration-1-detailed-testing.md  iteration-1-manual-testing.md  iteration-1-payment-flow.md  iteration-1-qa.md  iteration-1-review-response.md  iteration-1-review.md  iteration-1-summary.md  iteration-2-manual-test.md  iteration-2-qa.md  iteration-2-review-response.md  iteration-2-review.md  iteration-2-summary.md  iteration-3-manual-test.md  iteration-3-review-response.md  iteration-3-review.md  iteration-3-summary.md
docs/proto/: payment-service.md
load-tests/: payment_load_test.js
proto/payment/v1/: payment.proto
schemas/: dead_letter.json  event_envelope.json  payment_authorized.json  payment_declined.json
scripts/: generate_proto.sh  init_test_data.sql  reset_test_data.sql  run_outbox_processor.py  sample_consumer.py
src/payment_service/: __init__.py  config.py  grpc_server.py  logging.py  main.py
src/payment_service/api/: __init__.py  grpc_handlers.py  interceptors.py  metrics_server.py
src/payment_service/application/: __init__.py  services.py  unit_of_work.py
src/payment_service/domain/: __init__.py  exceptions.py  models.py
src/payment_service/infrastructure/: database.py  event_publisher.py  metrics.py  rate_limiter.py  redis_client.py
src/payment_service/infrastructure/repositories/: __init__.py  account.py  balances.py  idempotency.py  ledger.py  outbox.py  payment.py
src/payment_service/proto/payment/v1/: payment_pb2.py  payment_pb2.pyi  payment_pb2_grpc.py
tests/: conftest.py
tests/e2e/: test_payment_flow.py
tests/integration/: test_metrics_server.py  test_outbox_processor.py  test_outbox_processor_lifecycle.py  test_rate_limiter.py  test_redis_client.py
tests/unit/: test_domain.py  test_event_schema_validation.py  test_interceptors.py  test_metrics.py  test_metrics_server.py  test_outbox_config.py  test_outbox_event.py  test_rate_limiter.py  test_redis_client.py  test_sample_consumer.py  test_services.py
